# InfiRayProPyCapture

./: .gitignore  README.md  pyproject.toml  requirements.txt
irpropycapture/: __init__.py  benchmark.py  main.py
irpropycapture/core/: __init__.py  camera_capture.py  camera_controls.py  frame_processing_worker.py  image_processor.py  image_saver.py  perf.py  state.py  temperature_processor.py  video_recorder.py
irpropycapture/resources/: __init__.py
irpropycapture/resources/icons/: __init__.py
irpropycapture/ui/: __init__.py  main_window.py
tests/: test_image_processor.py  test_temperature_processor.py
